--- a/src/app/pages/unauthorized/unauthorized.component.html
+++ b/src/app/pages/unauthorized/unauthorized.component.html
@@ -92,7 +92,7 @@
 
     <!-- Footer -->
     <p class="text-center text-sm text-slate-500 dark:text-slate-400 mt-6">
-      FastFood App © 2025
+      erre App © 2025
     </p>
 
   </div>
