--- a/src/app/core/layout/side-nav/side-nav.component.html
+++ b/src/app/core/layout/side-nav/side-nav.component.html
@@ -1,8 +1,9 @@
 <header class="brand">
-  <span class="brand__logo" aria-hidden="true">🍔</span>
+  <span class="brand__logo" aria-hidden="true">
+    <img src="../../../../assets/img/icon.png" alt="" />
+  </span>
   <div class="flex-1">
     <a routerLink="/home" class="brand__title">Pa las papas</a>
-    <div class="brand__subtitle">Panel</div>
   </div>
   <!-- Botón cerrar (solo móvil) -->
   <button class="icon-btn lg:hidden" (click)="close.emit()" aria-label="Cerrar menú">
