--- a/src/app/core/layout/side-nav/side-nav.component.html
+++ b/src/app/core/layout/side-nav/side-nav.component.html
@@ -1,9 +1,8 @@
 <header class="brand">
-  <span class="brand__logo" aria-hidden="true">
-    <img src="../../../../assets/img/icon.png" alt="" />
-  </span>
+  <span class="brand__logo" aria-hidden="true">🍔</span>
   <div class="flex-1">
-    <a routerLink="/home" class="brand__title">Pa las papas</a>
+    <a routerLink="/home" class="brand__title">Inicio</a>
+    <div class="brand__subtitle">Pa las papas</div>
   </div>
   <!-- Botón cerrar (solo móvil) -->
   <button class="icon-btn lg:hidden" (click)="close.emit()" aria-label="Cerrar menú">
