--- a/src/app/core/layout/side-nav/side-nav.component.html
+++ b/src/app/core/layout/side-nav/side-nav.component.html
@@ -1,10 +1,11 @@
 <header class="brand">
   <span class="brand__logo" aria-hidden="true">🍔</span>
+
   <div class="flex-1">
-    <a routerLink="/home" class="brand__title">Inicio</a>
+    <a [routerLink]="homeRoute" class="brand__title" (click)="close.emit()">Inicio</a>
     <div class="brand__subtitle">Pa las papas</div>
   </div>
-  <!-- Botón cerrar (solo móvil) -->
+
   <button class="icon-btn lg:hidden" (click)="close.emit()" aria-label="Cerrar menú">
     <lucide-icon [img]="XIcon" size="20"></lucide-icon>
   </button>
@@ -16,8 +17,7 @@
     <ul class="nav__list">
       <li *ngFor="let item of section.items">
         <a [routerLink]="item.route" class="nav__link" routerLinkActive="is-active"
-          [routerLinkActiveOptions]="{ exact: item.exactMatch ?? true }"
-          (click)="close.emit()">
+          [routerLinkActiveOptions]="{ exact: item.exactMatch ?? true }" (click)="close.emit()">
           <lucide-icon [img]="item.icon" size="18"></lucide-icon>
           <span>{{ item.label }}</span>
         </a>
